@@ -18,9 +18,15 @@
  */
 package org.netbeans.modules.java.completion;
 
+import java.util.ArrayList;
+import java.util.List;
 import javax.lang.model.SourceVersion;
+import javax.swing.event.ChangeListener;
 import org.netbeans.junit.NbTestSuite;
 import org.netbeans.modules.java.source.parsing.JavacParser;
+import org.netbeans.spi.java.queries.CompilerOptionsQueryImplementation;
+import org.openide.filesystems.FileObject;
+import org.openide.util.lookup.ServiceProvider;
 /**
  *
  * @author arusinha
@@ -51,17 +57,15 @@ public class JavaCompletionTask114FeaturesTest extends CompletionTestBase {
     
 
     public void testBeforeLeftRecordBraces() throws Exception {
-        performTest("Records", 896, null, "implementsKeyword.pass", SOURCE_LEVEL);
+        EXTRA_OPTIONS.add("--enable-preview");
+        performTest("Records", 896, null, "implementsKeyword.pass", getLatestSource());
     }
         
-        public void testBeforeRecParamsLeftParen() throws Exception {
-        performTest("Records", 892, null, "empty.pass", SOURCE_LEVEL);
+    public void testBeforeRecParamsLeftParen() throws Exception {
+        EXTRA_OPTIONS.add("--enable-preview");
+        performTest("Records", 892, null, "empty.pass", getLatestSource());
     }
 
-    public void testInsideRecParams() throws Exception {
-        performTest("Records", 894, "R", "typesRecordLocalMembersAndVars.pass", SOURCE_LEVEL);
-    }
-    
     public void testAfterTypeParamInRecParam() throws Exception {
         performTest("Records", 890, null, "extendsKeyword.pass", SOURCE_LEVEL);
     }
@@ -79,7 +83,8 @@ public class JavaCompletionTask114FeaturesTest extends CompletionTestBase {
     } 
     
     public void testVariableNameSuggestion() throws Exception {
-        performTest("Records", 1071, null, "recordVariableSuggestion.pass", SOURCE_LEVEL);
+        EXTRA_OPTIONS.add("--enable-preview");
+        performTest("Records", 1071, null, "recordVariableSuggestion.pass", getLatestSource());
     } 
     
     public void noop() {
@@ -87,5 +92,32 @@ public class JavaCompletionTask114FeaturesTest extends CompletionTestBase {
 
     static {
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+    }
+    
+    private String getLatestSource(){
+        return SourceVersion.latest().name().substring(SourceVersion.latest().name().indexOf("_")+1);
+    }
+    private static final List<String> EXTRA_OPTIONS = new ArrayList<>();
+    @ServiceProvider(service = CompilerOptionsQueryImplementation.class, position = 100)
+    public static class TestCompilerOptionsQueryImplementation implements CompilerOptionsQueryImplementation {
+
+        @Override
+        public CompilerOptionsQueryImplementation.Result getOptions(FileObject file) {
+            return new CompilerOptionsQueryImplementation.Result() {
+                @Override
+                public List<? extends String> getArguments() {
+                    return EXTRA_OPTIONS;
+                }
+
+                @Override
+                public void addChangeListener(ChangeListener listener) {
+                }
+
+                @Override
+                public void removeChangeListener(ChangeListener listener) {
+                }
+            };
+        }
+
     }
 }
